hphp/test/slow/reified_generics/error-class-creation-2.php.expectf
Fatal error: This class requires 2 reified generics but 1 given in %s on line 5
